Add post requests to swagger, Updated route names
